ThirdParty/mojoshader/unit_tests/preprocessor/errors/undef-file.correct
preprocessor/errors/undef-file:1: ERROR: undefining "__FILE__"
